# FunderMapsSDK

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  Dockerfile  README.md  TODO.md  app.py  cleanup_storage.py  command.py  config.ini  create_deployment.py  deploy.py  deploy.sh  export_product.py  fmcli  fundermaps.py.old  generate_pdf.py  load_bag.py  load_bag3d.py  load_dataset.py  map_gen.py  map_generation.py  process_mapset.py  process_worker_jobs.py  product_export.py  pyproject.toml  refresh_models.py  requirements.txt  run.sh  send_mail.py  tasks.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: docker-image.yml
analytics/: data.model_risk_dynamic_all.sql
contrib/: fundermaps-export-product.service  fundermaps-export-product.timer  fundermaps-process-mapset.service  fundermaps-process-worker-jobs.service  fundermaps-refresh-model.service  fundermaps-refresh-model.timer  prefect-worker.service
fundermapssdk/: __init__.py  app.py  cli.py  command.py  config.py  db.py  gdal.py  geocoder.py  mail.py  pdf.py  storage.py  tippecanoe.py  util.py
fundermapssdk/sql/: load_subsidence.sql  load_subsidence_history.sql
fundermapsworker/: __init__.py  command.py  config.py
fundermapsworker/commands/: cleanup_storage.py  export_product.py  generate_pdf.py  load_dataset.py  process_mapset.py  refresh_models.py  send_mail.py
fundermapsworker/providers/: __init__.py  db.py  gdal.py  mail.py  pdf.py  storage.py
scripts/: analysis_full.py  export_models.py  generate_pdf.py  inquiry_file.py  load_bag.py  load_bag3d.py  load_cbs.py  load_subsidence.py  map_gen.py  product_export.py  refresh_models.py  select_dump_model.py  test_task.py  user_org.py
sql/: load_address.sql  load_building.sql  prepare_bag.sql
sql/load/: load_residence.sql  load_subsidence.sql  load_subsidence_history.sql
sql/migrate/: migrate_incident_gfm_to_bag.sql  migrate_inquiry_sample_address_gfm_to_bag.sql  migrate_product_tracker_gfm_to_bag.sql  migrate_product_tracker_hypertable.sql
sql/model/: consolidate_analysis_views.sql  create_building_precomputed.sql  create_helper_functions.sql  create_refresh_all.sql  fix_statistics.sql  recreate_model_risk_dynamic_all.sql  recreate_model_risk_manifest.sql  recreate_sample_matviews.sql
