[project]
name = "fundermapssdk"
version = "0.1.0"
description = "FunderMaps SDK"
authors = [{ name = "FunderMaps B.V." }]
dependencies = [
    "boto3==1.38.11",
    "colorlog",
    "httpx[http2]==0.28.1",
    "mailgun",
    "psycopg2-binary==2.9.10",
    "python-dotenv",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fundermapssdk"]
